--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					<tr class="gridStarRow">
 						<td>{{getHexSolarId}}</td>
 						<td class="gridStarName" onclick="regionHandler.lookAt({{solarIndex}});">{{name}}</td>
-						<td><div class="gridStarColor" style="background-color:rgb({{starColor}});"></div></td>
+						<td><div class="gridStarColor" style="background-color:rgb({{getStarColor}});"></div></td>
 						<td>{{getRaceName}}</td>
 					</tr>
 				{{/data}}
