--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 				{{/currentData}}
 			</table>
 			<div> Page {{humanPageIndex}} of {{maxPages}}   
-				<i class="icon-left-open pageleft" title="previous" onclick="uiHandler.listPrevPage();"> </i> 
-				<i class="icon-right-open pageright" title="next" onclick="uiHandler.listNextPage();"> </i> 
+				<i class="icon-left-open pageleft" title="previous" onclick="uiHandler.listPrevPage();"> Prev</i> 
+				<i class="icon-right-open pageright" title="next" onclick="uiHandler.listNextPage();"> Next</i> 
 			</div>
 		</script>
 		
