--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 
 <!-- Created by pahefu @ 2017 -->
-<!-- Version review -->
+<!-- Version review 0.3 -->
+<!-- Applied performance updates -->
 
 <html>
 	<head>
