--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 				</div>
 								
 				<div id="drawPanelApp" class="o-grid__cell o-grid__cell--width-100 o-grid__cell--width-60@small">
-					<div id="canvasControls">
+					<div id="canvasControls" style="position:absolute;">
 						<ul class="c-card c-card--menu">
 							<li class="c-card__item c-card__item--brand">
 								<div class="dinline">Showing: </div>								  
