Small improvements and tests

--- a/index.html
+++ b/index.html
@@ -239,6 +239,15 @@
 									  </div>
 									</div>
 								</fieldset>
+								
+								<fieldset class="o-fieldset">
+									<div class="c-input-group">
+									  <button class="c-button c-button--brand">Max name length</button>
+									  <div class="o-field">
+										<input type="text" class="c-field" v-model="max_name_length" v-on:change="applySettings">
+									  </div>
+									</div>
+								</fieldset>
 							
 							</div>
 							<!-- End of settings APP -->
