--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div container style="max-width:inherit!important;">
 
 			<ul id="brand" class="c-nav c-nav--inline">
-				<li class="c-nav__content nopadding logoParent"><img id="hubLogo" src="./img/hublogo.png"/></li>
+				<li class="c-nav__content nopadding logoParent"><img id="hubLogo" src="./img/hublogo.svg" style="max-width:25px;"/></li>
 				<li class="c-nav__content nopadding">
 					NMS The Hub Management System 
 					<span class="c-badge c-badge--brand">v.0.4.1</span>
